# taborg

./: Learnings.txt  README.md  RequirementList.txt  main  main.cpp  tabOperations.hpp  tabStruct.cpp  tabStruct.hpp
FileHandling/: CMakeLists.txt  hello.cpp
FileHandling/lib/math/: Operations.cpp  Operations.hpp
